<resources>

    <string name="app_name">ATM</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ATM Service</string>
    <string name="strBankName">Ngân hàng</string>
    <string name="tvATMCode">Mã máy</string>
    <string name="tvAddress">Địa chỉ</string>
    <string name="tvBranch">Chi nhánh?</string>
    <string name="rdY">có</string>
    <string name="rdN">Không</string>
    <string name="btSearch">Tìm kiếm</string>
    <string name="btCancel">Hủy</string>
    <string name="btViewMap">Xem bản đồ</string>
    <string name="tvUserName">Tên đăng nhập</string>
    <string name="tvEmail">Email</string>
    <string name="tvPass">Mật khẩu</string>
    <string name="tvXuatPhat">Xuất phát:</string>
    <string name="tvDich">Điểm đích:</string>
    <string name="tvThoiGian">Thời gian: </string>
    <string name="tvDoDai">Độ dài: </string>

</resources>