<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chi tiết quãng đường" 
            android:textColor="#123edf"/>

        <TextView
            android:id="@+id/tvXP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvXuatPhat"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/tvDich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDich"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/tvThoiGian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvThoiGian" 
            android:textSize="12dip"/>

        <TextView
            android:id="@+id/tvDoDai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDoDai" 
            android:textSize="12dip"/>
    </LinearLayout>

    <com.google.android.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="0iBtnFuqElrZ0EHGB29q6gdYhOIGHDQ9XEvMjOQ"
        android:clickable="true"
        android:enabled="true" />

</LinearLayout>